--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "imap": "^0.8.19",
     "jsonwebtoken": "^8.5.1",
