email configuration set

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-Useremailpassword=""
-Useremail="prajapatipratik844@gmail.com"
+Useremailpassword=collkuhhkbnurfyr
+Useremail=prajapatichirag2162003@gmail.com
